# multirom

./: .gitignore  .gitmodules  device_defines.mk  main.c  meson.build  multirom.c  multirom.h
install_zip/: rename_zip.sh
lib/: Android.mk  atomics.h  colors.h  framebuffer.c  framebuffer.h  log.h  meson.build  util.c  util.h
subprojects/: libbootimg.wrap
